[package]
name = "Ath-Checker"
version = "0.1.0"
edition = "2024"

[dependencies]
binance = { git = "https://github.com/ccxt/binance-rs.git" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = { version = "0.9.33" }
teloxide = { version = "0.12", features = ["macros"] }